# EnergyOptimization

./: .gitignore  MESH2-ENERGY-point-set_10_7451a2a9.ipe  MESH2-ENERGY-point-set_10_97578aae.ipe  MESH2-point-set_10_7451a2a9.ipe  MESH2-point-set_10_97578aae.ipe  README.md  medians  point-set_100_0245ce31.ipe  result.txt  simple-polygon_150_c0cf1e9c.ipe
normal_delaunay_refinement/ipe/: ortho_10_d2723dcc.ipe  ortho_150_53eb4022.ipe  ortho_250_3b977f7e.ipe  ortho_250_6e6a66c2.ipe  ortho_60_5c5796a0.ipe  point-set_100_0245ce31.ipe  point-set_100_05594822.ipe  point-set_100_dd67678e.ipe  point-set_10_13860916.ipe  point-set_10_7451a2a9.ipe  point-set_10_97578aae.ipe  point-set_10_ae0fff93.ipe  point-set_10_c04b0024.ipe  point-set_10_d009159f.ipe  point-set_10_f999dc7f.ipe  point-set_150_1fb326cf.ipe  point-set_150_20bcb550.ipe  point-set_150_982c9ab3.ipe  point-set_150_b26a2c80.ipe  point-set_20_0c4009d9.ipe  point-set_20_34a047f7.ipe  point-set_20_41c48315.ipe  point-set_20_54ab0b47.ipe  point-set_20_5868538a.ipe  point-set_20_72cd2066.ipe  point-set_20_fa3fd7e0.ipe  (+30 more)
python/: all_instances_deviations.py  all_instances_steiner.py  aspect_ratios.py  cg_shop.csv  cg_shop_result.csv  cg_shop_result_ortho.csv  cg_shop_result_pointset.csv  cg_shop_result_simple.csv  cg_shop_result_simple_exterior.csv  cg_shop_simple_exterior.csv  cg_shop_stats.py  fully_non_obtuse.py  mesh_angle_stats.py  num_obtuse.py  obtuse_boxplot.py  quad_angles.py  quad_aspect_ratios.py  score.py  steiner_boxplot.py  steiner_boxplot_obtuse.py
results/: angle_data.csv  angle_data_before.csv  angle_data_equilateral.csv  angle_data_equilateral_mod.csv  angle_data_initial.csv  angle_data_lloyd.csv  angle_data_refined_sigmoid.csv  angle_stats_initial_simple-polygon_20_4bd3c2e5.csv  angle_stats_lloyd_simple-polygon_20_4bd3c2e5  angle_stats_lloyd_simple-polygon_20_4bd3c2e5.csv  angle_stats_sq_penalty_simple-polygon_20_4bd3c2e5.csv  angles_quad_blossom_initial.csv  angles_quad_blossom_initial_2.csv  angles_quad_blossom_optimized.csv  angles_quad_blossom_optimized_angles.csv  angles_quad_blossom_optimized_angles_2.csv  angles_quad_medians_initial_angles.csv  angles_quad_medians_optimized.csv  angles_quad_medians_optimized_angles.csv  aspect_ratios_equilateral.csv  aspect_ratios_equilateral_mod.csv  aspect_ratios_initial.csv  aspect_ratios_initial_simple-polygon_20_4bd3c2e5.csv  aspect_ratios_lloyd_simple-polygon_20_4bd3c2e5  aspect_ratios_lloyd_simple-polygon_20_4bd3c2e5.csv  aspect_ratios_quad_blossom_initial.csv  aspect_ratios_quad_blossom_initial_2.csv  aspect_ratios_quad_blossom_optimized.csv  aspect_ratios_quad_blossom_optimized_angles.csv  aspect_ratios_quad_blossom_optimized_angles_2.csv  aspect_ratios_quad_medians_initial_angles.csv  aspect_ratios_quad_medians_optimized.csv  aspect_ratios_quad_medians_optimized_angles.csv  aspect_ratios_sigmoid.csv  aspect_ratios_sq_penalty_20.csv  aspect_ratios_sq_penalty_simple-polygon_20_4bd3c2e5.csv  fully_nonobtuse_ortho.csv  fully_nonobtuse_ortho_offcenter.csv  fully_nonobtuse_pointset.csv  fully_nonobtuse_pointset_offcenter.csv  (+81 more)
src/: CMakeLists.txt  main.cpp  problem.cpp
src/include/: delaunay_refinement.hpp  global_optimization.hpp  gradient_descent_optimization.hpp  lloyd.hpp  local_optimization.hpp  main.hpp  mesh_statistics.hpp  meshing_obtuse.hpp  miscellaneous.hpp  problem.hpp  quad_mesher.hpp  quad_optimization.hpp  solver.hpp  tinyAD_optimization.hpp
src/solvers/: delaunay_refinement.cpp  global_optimization.cpp  gradient_descent_optimization.cpp  lloyd.cpp  local_optimization.cpp  meshing_obtuse.cpp  quad_mesher.cpp  quad_optimization.cpp  tinyAD_optimization.cpp
(+89 files in other folders)
